k8s/51-kafka-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ui-ingress
  namespace: kafka-ui
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: kafka-ui.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redpanda-console-console
                port:
                  number: 8080
